<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/light_grey"
    android:gravity="start|center_vertical"
    android:orientation="horizontal"
    tools:ignore="TextContrastCheck">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.9"
        android:hint="@string/day">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/day_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789"
            android:inputType="number"
            android:maxLength="2"
            android:selectAllOnFocus="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:hint="@string/month">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/month_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789"
            android:inputType="number"
            android:maxLength="2"
            android:selectAllOnFocus="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.2"
        android:hint="@string/year">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/year_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789"
            android:inputType="number"
            android:maxLength="4"
            android:selectAllOnFocus="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/date_picker_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        app:icon="@drawable/ic_baseline_edit_calendar_24"
        app:iconGravity="textStart"
        app:iconPadding="0dp" />
</LinearLayout>